# wasm-components-with-wasmtime-embedding

./: Cargo.toml  makefile
.devcontainer/: bootstrap.sh
components/range_validator/: Cargo.toml
components/range_validator/src/: bindings.rs  lib.rs
components/transformer/: Cargo.toml
components/transformer/src/: bindings.rs  lib.rs
modules/wasm/: Cargo.toml
modules/wasm/src/: lib.rs
src/: main.rs
src/go/: go.mod  go.sum
src/go/wasm-runner/: wasm-runner.go
